--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ dependencies = [
     "numpy>=1.26.0",
     "psutil>=5.9.0",
     "faster-whisper>=0.10.0",
+    "google-generativeai>=0.8.0",
+    "pytest>=8.0.0",
+    "pytest-mock>=3.12.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [tool.ruff]
