設定とタスク定義の整理

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,22 @@
-# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Virtual environments
 .venv/
 venv/
 env/
-
-# Packaging / distribution
 build/
 dist/
 *.egg-info/
-
-# Tooling artifacts
 .mypy_cache/
 .pytest_cache/
 .ruff_cache/
 .coverage
-
-# OS-specific
 .DS_Store
-
-# Local configuration
 .env
-
-# Runtime artifacts
 recordings/
 !recordings/README.md
-diaries/
-!diaries/README.md
 transcripts/
 !transcripts/README.md
+summaries/
+!summaries/README.md
 vlog.log
