Improve reader UI and task automation

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ frontend/reader/.next/
 frontend/reader/.vercel/
 frontend/reader/cloudflared
 frontend/reader/package-lock.json
+frontend/reader/.env.local
