--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,7 +1,8 @@
 version: '3'
+
 tasks:
   default:
-    desc: ユーザーストーリー別クイックガイド
+    desc: クイックガイド
     cmds:
       - |
           cat <<'EOF'
@@ -10,86 +11,72 @@ tasks:
           [サービス]     task up | task down | task status | task logs | task restart
           [録音/処理]    task record | task process FILE=... | task transcribe FILE=... | task summarize FILE=...
           [品質]         task lint
+          [同期]         task sync
           [後片付け]     task clean
           [コミット]     task commit MESSAGE="説明"
           EOF
 
-  setup:
-    desc: 依存同期 (uv sync)
-    cmd: uv sync
+  setup: {desc: 依存同期, cmd: uv sync}
+  dev:   {desc: アプリ実行, cmd: uv run python -m src.main}
 
-  dev:
-    desc: アプリをフォアグラウンド実行
-    cmd: uv run python -m src.main
+  up:      {desc: systemd有効化+起動, cmd: systemctl --user enable --now vlog.service}
+  down:    {desc: systemd無効化+停止, cmd: systemctl --user disable --now vlog.service}
+  status:  {desc: systemd状態, cmd: systemctl --user status vlog}
+  logs:    {desc: systemdログ追尾, cmd: journalctl --user -u vlog -f}
+  restart: {desc: systemd再起動, cmd: systemctl --user restart vlog}
 
-  up:
-    desc: systemdユーザーサービスを有効化して起動
-    cmd: systemctl --user enable --now vlog.service
-
-  down:
-    desc: systemdユーザーサービスを無効化して停止
-    cmd: systemctl --user disable --now vlog.service
-
-  status:
-    desc: systemdユーザーサービスの状態表示
-    cmd: systemctl --user status vlog
-
-  logs:
-    desc: systemdユーザーサービスのログ追尾
-    cmd: journalctl --user -u vlog -f
-
-  restart:
-    desc: systemdユーザーサービスを再起動
-    cmd: systemctl --user restart vlog
-
-  reader:dev:
-    desc: frontend/reader を 0.0.0.0:3000 で起動
-    cmd: cd frontend/reader && npm run dev -- --hostname 0.0.0.0 --port 3000
-
+  reader:dev:    {desc: frontend/reader dev, cmd: cd frontend/reader && npm run dev -- --hostname 0.0.0.0 --port 3000}
+  reader:build:  {desc: frontend/reader build, cmd: cd frontend/reader && npm run build}
+  reader:start:  {desc: frontend/reader prod(4000), cmd: cd frontend/reader && npm run start -- --hostname 0.0.0.0 --port 4000}
   reader:deploy:
-    desc: frontend/reader を Vercel (kaflog) にデプロイ
-    cmd: cd frontend/reader && npx vercel --prod
+    desc: frontend/reader デプロイ
+    cmds:
+      - cd frontend/reader && npx vercel link --project kaflog --yes
+      - cd frontend/reader && npx vercel --prod --yes
+  reader:env:
+    desc: ./.env → frontend/reader/.env.local に抽出
+    cmds:
+      - test -f .env || (echo ".env がありません" && exit 1)
+      - |
+        . ./.env
+        cat >frontend/reader/.env.local <<EOF
+        NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+        NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+        EOF
 
-  record:
-    desc: 手動録音を開始 (Ctrl+Cで停止)
-    cmd: uv run python -m src.cli record
+  record:    {desc: 手動録音開始, cmd: uv run python -m src.cli record}
 
   process:
-    desc: 録音ファイル一括処理 (Transcribe→Summarize) FILE=path/to/audio.wav
-    cmds:
-      - test -n "{{.FILE}}" || (echo "FILEを指定してください" && exit 1)
-      - uv run python -m src.cli process --file {{.FILE}}
+    desc: 録音→要約
+    deps: [require_file]
+    cmds: ["uv run python -m src.cli process --file {{.FILE}}"]
 
   transcribe:
-    desc: 音声→テキスト変換 (FILE=path/to/audio.wav)
-    cmds:
-      - test -n "{{.FILE}}" || (echo "FILEを指定してください" && exit 1)
-      - uv run python -m src.cli transcribe --file {{.FILE}}
+    desc: 音声→テキスト
+    deps: [require_file]
+    cmds: ["uv run python -m src.cli transcribe --file {{.FILE}}"]
 
   summarize:
-    desc: テキスト要約 (FILE=path/to/text.txt)
-    cmds:
-      - test -n "{{.FILE}}" || (echo "FILEを指定してください" && exit 1)
-      - uv run python -m src.cli summarize --file {{.FILE}}
+    desc: テキスト要約
+    deps: [require_file]
+    cmds: ["uv run python -m src.cli summarize --file {{.FILE}}"]
 
-  sync:
-    desc: summaries/*.txt を Supabase に同期
-    cmd: uv run python src/sync_supabase.py
+  sync: {desc: summaries を Supabase 同期, cmd: uv run python src/sync_supabase.py}
 
   lint:
-    desc: Ruffで静的解析＋フォーマット
-    cmds:
-      - uv run ruff check src
-      - uv run ruff format src
+    desc: Ruff check+format
+    cmds: ["uv run ruff check src && uv run ruff format src"]
 
   clean:
-    desc: キャッシュ類を削除 (__pycache__/.ruff_cache)
-    cmds:
-      - rm -rf __pycache__ .ruff_cache
-      - find . -type d -name "__pycache__" -exec rm -rf {} + || true
+    desc: キャッシュ削除
+    cmds: ["rm -rf __pycache__ .ruff_cache && find . -type d -name __pycache__ -exec rm -rf {} + || true"]
 
   commit:
-    desc: Git add && commit
-    cmds:
-      - git add .
-      - git commit -am "{{.MESSAGE}}"
+    desc: Git add+commit
+    cmds: ["git add . && git commit -am '{{.MESSAGE}}'"]
+
+  require_file:
+    internal: true
+    preconditions:
+      - sh: test -n "{{.FILE}}"
+        msg: FILEを指定してください
