Add bootstrap noschedule guard and test command

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -32,6 +32,8 @@ tasks:
             WSL bash→Win:  WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\run.ps1"
           ■ bootstrap（管理者PowerShell）
             powershell -NoProfile -ExecutionPolicy Bypass -File "\\wsl.localhost\\Ubuntu-22.04\\home\\kafka\\projects\\vlog\\bootstrap.ps1"
+          ■ bootstrap テスト（WSL→Windows / 予約なし）
+            WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
 
           ■ データ同期
             task sync                     Supabase同期
