--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -32,6 +32,8 @@ tasks:
             WSL bash→Win:  WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\run.ps1"
           ■ bootstrap（管理者PowerShell）
             powershell -NoProfile -ExecutionPolicy Bypass -File "\\wsl.localhost\\Ubuntu-22.04\\home\\kafka\\projects\\vlog\\bootstrap.ps1"
+          ■ bootstrap テスト（WSL→Windows / スケジュール登録なし）
+            WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
           ■ bootstrap テスト（WSL→Windows / 予約なし）
             WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
 
@@ -129,6 +131,17 @@ tasks:
     cmds:
       - touch summaries/*.txt
       - task sync
+
+  # ────────────────────────────────────────
+  # Windows bootstrap
+  # ────────────────────────────────────────
+  bootstrap:
+    desc: Windows 自動起動セットアップ（管理者PowerShellで実行）
+    cmd: powershell -NoProfile -ExecutionPolicy Bypass -File "\\wsl.localhost\\Ubuntu-22.04\\home\\kafka\\projects\\vlog\\bootstrap.ps1"
+
+  bootstrap:test:
+    desc: WSL→Windows でスケジュール登録なしの動作確認
+    cmd: WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
 
   # ────────────────────────────────────────
   # Web UI
