--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -137,11 +137,16 @@ tasks:
   # ────────────────────────────────────────
   bootstrap:
     desc: Windows 自動起動セットアップ（管理者PowerShellで実行）
-    cmd: powershell -NoProfile -ExecutionPolicy Bypass -File "\\wsl.localhost\\Ubuntu-22.04\\home\\kafka\\projects\\vlog\\bootstrap.ps1"
+    cmd: |
+      WINPS=$(command -v powershell.exe || echo /mnt/c/Windows/System32/WindowsPowerShell/v1.0/powershell.exe)
+      "$WINPS" -NoProfile -ExecutionPolicy Bypass -File "\\wsl.localhost\\Ubuntu-22.04\\home\\kafka\\projects\\vlog\\bootstrap.ps1"
 
   bootstrap:test:
     desc: WSL→Windows でスケジュール登録なしの動作確認
-    cmd: WINPWD=$(wslpath -w "$PWD"); powershell.exe -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
+    cmd: |
+      WINPS=$(command -v powershell.exe || echo /mnt/c/Windows/System32/WindowsPowerShell/v1.0/powershell.exe)
+      WINPWD=$(wslpath -w "$PWD")
+      "$WINPS" -NoProfile -ExecutionPolicy Bypass -File "$WINPWD\\bootstrap.ps1" -NoSchedule
 
   # ────────────────────────────────────────
   # Web UI
