refactor: プロジェクト構造の完全整理
- PowerShell完全削除、.batファイルのみに統一
- データディレクトリをdata/以下に統合 (recordings, transcripts, summaries)
- ログをlogs/vlog.logに移動
- view_logs.pyをsrc/に移動
- 1ファイルディレクトリ削除 (scripts/, config/, systemd/)
- 全ファイルのパス参照をdata/以下に修正
- 重複ドキュメント削除 (customer_journey.md等)
- ルートファイル数を7個まで削減

Windows起動: windows/run.bat, windows/bootstrap.bat

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,10 @@ dist/
 .coverage
 .DS_Store
 .env
-recordings/
-!recordings/README.md
-transcripts/
-!transcripts/README.md
-summaries/
-!summaries/README.md
-vlog.log
+data/recordings/
+data/transcripts/
+data/summaries/
+logs/
 frontend/reader/node_modules/
 frontend/reader/.next/
 frontend/reader/.vercel/
