--- a/config.yaml
+++ b/config.yaml
@@ -32,3 +32,12 @@ whisper:
   word_timestamps: true
 gemini:
   model: "gemini-flash-latest"
+
+novel:
+  enabled: true
+  title: "VRChat Long Diary 2025"
+  out_dir: "data/novels"
+  model: "gemini-2.5-flash"
+  max_output_tokens: 8192
+  include_history_mode: "recent_chapters"
+  recent_chapters_limit: 3
