--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
     "supabase>=2.0.0",
     "nvidia-cublas-cu12>=12.1.3.1",
     "nvidia-cudnn-cu12>=9.1.0.70",
+    "torch>=2.5.1",
+    "diffusers @ git+https://github.com/huggingface/diffusers",
+    "transformers>=4.46.3",
+    "huggingface-hub>=0.26.2",
+    "accelerate>=1.1.1",
+    "sentencepiece>=0.2.0",
 ]
 
 [tool.ruff]
