--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "huggingface-hub>=0.26.2",
     "accelerate>=1.1.1",
     "sentencepiece>=0.2.0",
+    "pydantic-settings>=2.12.0",
 ]
 
 [tool.ruff]
