feat: enhance image generation and sync
- Improve image generator prompts for better quality and style (vivid, 8k, cinematic).
- Update Jules prompt generation for more evocative scene descriptions.
- Save generated prompts to data/photos_prompts for debugging.
- Add _sync_photos to Supabase repository to upload generated images and link them to novels.
- Update configuration and Taskfile.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -228,7 +228,7 @@ tasks:
       - sh: test -n "{{.novel}}"
         msg: novel=data/novels/YYYYMMDD.mdを指定してください
 
-  photos:all:
+  photos:
     desc: 全小説から画像を一括生成
     cmds:
       - for f in data/novels/*.md; do [ -f "$f" ] && task photo novel="$f"; done || true
