fix: resolve path discrepancy and install serena mcp
- fix(settings): add defensive path validation for linux

- fix(bootstrap): prevent .env pollution with absolute windows paths

- chore: revert taskfile to canonical paths

- feat: add serena mcp tasks and configuration

- chore: cleanup misplaced recordings and config files

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -259,3 +259,16 @@ tasks:
     preconditions:
       - sh: test -n "{{.FILE}}"
         msg: FILEを指定してください
+
+  # ────────────────────────────────────────
+  # Serena MCP
+  # ────────────────────────────────────────
+  serena:onboarding:
+    desc: Serenaプロジェクトの初期化（インデックス作成）
+    cmds:
+      - serena project index
+
+  serena:start:
+    desc: Serena MCPサーバーの起動
+    cmds:
+      - serena start-mcp-server
