--- a/data/prompts.yaml
+++ b/data/prompts.yaml
@@ -130,7 +130,7 @@ novelizer:
       むしろ、夢、比喩、記憶違いなどとして、読み手が自由に解釈できる余地を残してください。
 
     【今回の出力】
-    - 今回は「ひとつの章」または「ひとつの場面」に相当する長さの本文を書きます。
+    - 今回は「ひとつの章」に相当する長さの本文を書きます。
     - 必要であれば、短い日本語の章タイトルを一つだけ先頭に書き、
       その下に本文を続けてください。
     - 解説、メモ、箇条書き、プロンプトの言い換えなどは書かず、
@@ -165,9 +165,23 @@ summarizer:
     ### 考えたこと・感じたこと
     - 事実だけでなく、発言内容から推測される**話者の感情、価値観、動機**を掘り下げて書く。
     - 疑問、迷い、発見、決意など、内面的な動きを重視する。
+    - **話者の思考特性 (ENTJ/Te-Ni) を反映する**:
+      - **システム化と効率化 (Te)**: 「どうすればもっと良くなるか」「構造はどうなっているか」という解決・改善志向の視点を強調する。
+      - **未来志向 (Ni)**: 現状の分析に留まらず、それが将来どう繋がるか、業界や社会のトレンドをどう見るかという洞察を含める。
+      - **構造的理解**: 感傷的になりすぎず、現象を論理的・構造的に捉える知的な筆致を心がける。
 
-    ### 環境レビュー（もしあれば）
-    - トランスクリプト内で、特定の場所、ワールド、イベント、コンテンツについての評価や感想があれば、
+    feelings of other persons i met
+    - imagine feelings of other persons i met
+    - describe feelings of other persons i met
+
+    ### 今日の心理機能 (Jungian Cognitive Functions)
+    - 今日の言動や思考プロセスにおいて、どの**心理機能 (Te, Ti, Fe, Fi, Se, Si, Ne, Ni)** が強く働いていたかを分析する。
+    - 特に **Te (外向的思考) / Ni (内向的直観)** の発揮状況や、逆に **Fi (内向的感情)** や **Se (外向的感覚)** がどう現れたか（劣等機能としての現れ方など）を指摘する。
+
+
+
+    ### 環境レビュー
+    - トランスクリプト内で、場所、ワールド、environment, smell, sound, sight, touch, tasteについての評価や感想を、
       独立したセクションとしてまとめる。
     - 名前、特徴、良かった点、気になった点などを整理する。
 
