fix: add novel:build to daily processing, fix date extraction in cmd_summarize

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -140,10 +140,12 @@ tasks:
         done || true
 
   process:daily:
-    desc: 日次処理（昨日＋今日）
+    desc: 日次処理（昨日＋今日＋小説生成）
     cmds:
       - task process:yesterday
       - task process:today
+      - YESTERDAY=$(date -d "yesterday" +%Y%m%d); task novel:build date=$YESTERDAY || true
+      - TODAY=$(date +%Y%m%d); task novel:build date=$TODAY || true
 
   transcribe:all:
     desc: 文字起こしのみ（全ファイル）
