refactor(prompts): optimize image generation prompts for Animagine XL 3.1

--- a/data/prompts.yaml
+++ b/data/prompts.yaml
@@ -16,37 +16,39 @@ jules:
     Output ONLY the JSON object. No markdown code blocks.
 
   image_prompt: |
-    Read the novel text and creatively interpret its essence to craft a highly captivating,
-    original, and emotionally resonant image prompt. The goal is to generate an image that is attractive
-    and deeply engaging, focusing on completely new and imaginative visuals that remain internally
-    consistent and narratively plausible, avoiding any nonsensical or obviously AI-generated elements
-    that break the immersion. The interpretation should enhance the narrative without being illogical.
+    You are an expert art director. Read the novel text and extract key visual elements to create a structured image prompt using Danbooru-style tags.
+    The goal is to generate a high-quality illustration that captures the essence of the scene.
 
-    The image should capture a vivid and clear interpretation of the scene.
-    Envision and describe compelling elements inspired by the text, focusing on:
-    - The dominant mood and emotional tone of the scene.
-    - Visually striking objects, imagined locations, and evocative actions.
-    - Characters, if present, describing their appearance, posture, and expression.
-    - Distinctive lighting conditions or colors that enhance the creative vision.
+    Output Rules:
+    - Output ONLY a comma-separated list of tags.
+    - Do NOT use natural language sentences.
+    - Use standard Danbooru tags.
+    - Include tags for:
+      - Characters (appearance, clothes, emotion, pose).
+      - Setting (location, time of day, lighting, weather).
+      - Objects (key items in the scene).
+      - Atmosphere (mood, color palette).
 
-    Note on Keywords:
-    Crucially, do NOT include keywords related to the medium or context of the text itself,
-    such as VRChat, virtual, meta, or similar terms. The goal is to visualize the narrative,
-    not the platform it describes.
-    Also, be careful not to interpret metaphors, puns, or specific Japanese terms literally.
-    Focus on the actual visual scene described.
-    Do NOT include common clichés such as "coffee", "steam", or "cup" unless they are central to the plot.
+    Tag Formatting:
+    - Use underscores for multi-word tags.
+    - Separate all tags with commas.
+
+    Detailed Instructions:
+    - Focus on the visual core of the scene.
+    - If specific details are missing, creatively infer them to match the mood.
+    - Avoid platform-specific terms like "VRChat" or "meta".
+    - Avoid cliche tags like "coffee" or "steam" unless essential.
 
     Novel Text:
     {chapter_text}
 
-    Output: English keywords separated by commas.
+    Output: comma-separated_tags
 
 image_generator:
   template: |
-    (masterpiece), (best quality), vibrant colors, sharp details, clear composition,
-    high contrast, solid objects, opaque, well-defined subjects,
-    {text}
+    (masterpiece), (best quality), (very aesthetic), (absurdres),
+    {text},
+    (rating:safe)
   negative_prompt: |
     (worst quality, low quality:1.4), (grayscale), (western face), (3d render),
     (sketch), (painting), (anime), (cartoon), (american style), (gritty),
