--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,6 @@ GOOGLE_API_KEY=your_api_key_here
 SUPABASE_URL=https://ctfklclaxidkjufnryvj.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=sb_secret_
 
-NEXT_PUBLIC_SUPABASE_URL=https://ctfklclaxidkjufnryvj.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_xxx
 VERCEL_TOKEN=
-
-NEXT_PUBLIC_SUPABASE_URL=https://ctfklclaxidkjufnryvj.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_
