feat: Implement LLM Observability and Curator evaluation system

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -149,6 +149,12 @@ tasks:
       - YESTERDAY=$(date -d "yesterday" +%Y%m%d); task novel:build date=$YESTERDAY || true
       - TODAY=$(date +%Y%m%d); task novel:build date=$TODAY || true
       - task process:pending
+      - YESTERDAY=$(date -d "yesterday" +%Y%m%d); task curator:eval date=$YESTERDAY || true
+
+  curator:eval:
+    desc: コンテンツ評価 (The Curator)
+    cmds:
+      - uv run python -m src.cli curator eval --date {{.date}}
 
   process:pending:
     desc: 未処理データを検出して一括処理
