docs: add function tables and config details to src README files

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -7,5 +7,34 @@
     "priority": "medium",
     "tags": [],
     "completed_at": "2025-11-29T21:01:53.793087"
+  },
+  {
+    "id": "f355868a-c870-4914-b0ab-f17a045cb0b4",
+    "created_at": "2026-01-14T22:10:13.285349",
+    "status": "pending",
+    "title": "Investigate and correct retweet data for @schroneko and @wing_ap",
+    "description": "Review the retweet counts for @schroneko (34) and @wing_ap (34 reported as fake). Verify the data integrity and apply necessary corrections.",
+    "priority": "medium",
+    "tags": [
+      "data-verification",
+      "social-media",
+      "analytics"
+    ],
+    "estimated_minutes": 30
+  },
+  {
+    "id": "8c8893a6-cc26-472a-96b1-9ce0b10fd69d",
+    "created_at": "2026-01-14T22:12:16.526606",
+    "status": "pending",
+    "title": "Investigate fake retweet count for @schroneko",
+    "description": "The retweet count for @schroneko has been reported as false or fake. Verification and update required.",
+    "priority": "medium",
+    "tags": [
+      "social-media",
+      "data-verification",
+      "twitter",
+      "investigation"
+    ],
+    "estimated_minutes": 20
   }
 ]
