--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "sentencepiece>=0.2.0",
     "pydantic-settings>=2.12.0",
     "pillow>=12.0.0",
+    "matplotlib>=3.10.8",
 ]
 
 [tool.ruff]
