--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ postgrest = "1.6" # Supabase client
 # whisper-rs = "0.11" # Whisper.cpp bindings (requires libclang)
 cpal = "0.15" # Audio recording
 hound = "3.5" # WAV file manipulation
+sysinfo = "0.30" # Process monitoring
+config = { version = "0.13", features = ["yaml"] }
+serde_yaml = "0.9"
